Fix: Close map-to-panel gap and prioritize map creation in Rider for faster load

--- a/Driver/src/app/home/home.page.scss
+++ b/Driver/src/app/home/home.page.scss
@@ -53,7 +53,7 @@ ion-content {
 
 ion-footer {
   ion-row {
-    padding-top: 5vh;
+    padding-top: 0;
     background: transparent;
     display: block;
 
