--- a/Rider/src/app/home/home.page.scss
+++ b/Rider/src/app/home/home.page.scss
@@ -70,7 +70,7 @@ ion-content {
 
 ion-footer {
   ion-row {
-    padding-top: 5vh;
+    padding-top: 0;
     background: transparent;
     display: block;
 
